src/test/ui/unboxed-closures/unboxed-closure-feature-gate.stderr
error[E0658]: parenthetical notation is only stable when used with `Fn`-family traits (see issue #29625)
  --> $DIR/unboxed-closure-feature-gate.rs:23:16
   |
LL |     let x: Box<Foo(isize)>;
   |                ^^^^^^^^^^
   |
   = help: add #![feature(unboxed_closures)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
